fix URLs in index.html

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- キーワード設定で検索にかかりやすくする。 -->
     <meta name="keywords" content="Privacy Camera,camera app,Katayama Hirofumi MZ,katahiromz" />
     <!-- アイコンを指定 -->
-    <link rel="icon" href="https://katahiromz.github.io/camera/favicon.ico" />
-    <link rel="apple-touch-icon" href="https://katahiromz.github.io/camera/apple-touch-icon.png" />
+    <link rel="icon" href="https://katahiromz.github.io/privacy-camera/favicon.ico" />
+    <link rel="apple-touch-icon" href="https://katahiromz.github.io/privacy-camera/apple-touch-icon.png" />
     <!-- テーマカラーを指定 -->
     <meta name="theme-color" content="#000000" />
     <!-- その他ウェブアプリに必要な設定を指定 -->
@@ -21,17 +21,17 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Privacy Camera" />
-    <link rel="apple-touch-icon" href="https://katahiromz.github.io/camera/pwa-72x72.png" sizes="72x72" />
-    <link rel="apple-touch-icon" href="https://katahiromz.github.io/camera/pwa-120x120.png" sizes="120x120" />
-    <link rel="apple-touch-icon" href="https://katahiromz.github.io/camera/pwa-192x192.png" sizes="192x192" />
-    <link rel="apple-touch-icon" href="https://katahiromz.github.io/camera/pwa-512x512.png" sizes="512x512" />
+    <link rel="apple-touch-icon" href="https://katahiromz.github.io/privacy-camera/pwa-72x72.png" sizes="72x72" />
+    <link rel="apple-touch-icon" href="https://katahiromz.github.io/privacy-camera/pwa-120x120.png" sizes="120x120" />
+    <link rel="apple-touch-icon" href="https://katahiromz.github.io/privacy-camera/pwa-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="https://katahiromz.github.io/privacy-camera/pwa-512x512.png" sizes="512x512" />
     <!-- 自動翻訳しない設定 -->
     <meta name="google" content="notranslate" />
     <!-- 【Open Graph Protocol】ここから -->
     <meta property="og:title" content="Privacy camera web app by katahiromz" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://katahiromz.github.io/camera/" />
-    <meta property="og:image" content="https://katahiromz.github.io/camera/og-image-1200x630.png" />
+    <meta property="og:url" content="https://katahiromz.github.io/privacy-camera/" />
+    <meta property="og:image" content="https://katahiromz.github.io/privacy-camera/og-image-1200x630.png" />
     <meta property="og:description" content="A privacy camera web application by Katayama Hirofumi MZ." />
     <meta property="og:site_name" content="Privacy Camera" />
     <meta property="og:locale" content="en_US" />
@@ -41,7 +41,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Privacy Camera" />
     <meta name="twitter:description" content="A privacy camera app for you." />
-    <meta name="twitter:image" content="https://katahiromz.github.io/camera/pwa-192x192.png" />
+    <meta name="twitter:image" content="https://katahiromz.github.io/privacy-camera/pwa-192x192.png" />
     <!-- 【Twitter Card】ここまで -->
     <script async type="module" src="/src/main.tsx"></script>
   </head>
